<resources>
    <string name="app_name">MAD24P03Team2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_macros">Recommended Macros</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="carbs_amount">23g</string>
    <string name="protein_amount">23g</string>
    <string name="fats_amount">23g</string>
    <string name="kCal_amount">505\nKcal</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="cal">Calories</string>
</resources>