<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/left_arrow"
            android:layout_marginStart="0dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/inter_bold"
            android:text="@string/recommended_macros"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <View
            android:layout_width="328dp"
            android:layout_height="2dp"
            android:layout_marginTop="68dp"
            android:background="@color/light_grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/macro_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintHorizontal_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/info_margin" >

            <TextView
                android:id="@+id/tvRM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/recommended_macros"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardc"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tvRM"
                app:layout_constraintStart_toStartOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carbs_amount"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:fontFamily="@font/inter_regular"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp"
                app:layout_constraintStart_toEndOf="@id/cardc"
                app:layout_constraintTop_toBottomOf="@+id/tvRM">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protein_amount"
                        android:textSize="16sp"
                        android:fontFamily="@font/inter_regular"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardf"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp"
                app:layout_constraintStart_toEndOf="@id/cardp"
                app:layout_constraintTop_toBottomOf="@+id/tvRM">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tvf1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/fats_amount"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardk"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="50dp"
                app:cardElevation="12dp"
                app:layout_constraintStart_toEndOf="@id/cardf"
                app:layout_constraintTop_toBottomOf="@+id/tvRM">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvk1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/kCal_amount"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:text="@string/carbs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardc" />

            <TextView
                android:id="@+id/tvp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/protein"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvc2"
                app:layout_constraintTop_toBottomOf="@id/cardp" />

            <TextView
                android:id="@+id/tvf2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="52dp"
                android:text="@string/fats"
                app:layout_constraintEnd_toStartOf="@+id/tvk2"
                app:layout_constraintStart_toEndOf="@+id/tvp2"
                app:layout_constraintTop_toBottomOf="@+id/cardf" />

            <TextView
                android:id="@+id/tvk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="8dp"
                android:text="@string/cal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvf2"
                app:layout_constraintTop_toBottomOf="@+id/cardk"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="87dp">

        <Button
            android:id="@+id/button"
            android:layout_width="328dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/lavender"
            android:text="@string/lets_go"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.5" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>